slightly improved controls gap inside modal

--- a/src/gutenberg/components/controls-render/style.scss
+++ b/src/gutenberg/components/controls-render/style.scss
@@ -4,6 +4,9 @@
     word-break: break-word;
     opacity: .5;
 }
+.components-modal__content .vpf-control-wrap {
+    margin-bottom: 24px;
+}
 
 .vpf-control-category-title-pro {
     padding: .2em .8em;
