--- a/src/gutenberg/components/gallery-control/style.scss
+++ b/src/gutenberg/components/gallery-control/style.scss
@@ -13,7 +13,6 @@
             width: calc(33.33% - 15px);
             margin-top: 15px;
             margin-left: 15px;
-            border-radius: 5px;
 
             .vpf-component-gallery-control-item-button {
                 position: relative;
@@ -24,7 +23,8 @@
                 padding-bottom: 100%;
                 overflow: hidden;
                 // stylelint-disable-next-line
-                background-color: #d4d4d4 !important;
+                background-color: #f7f7f7 !important;
+                border-radius: 5px;
                 // stylelint-disable-next-line
                 box-shadow: none !important;
                 transition: .2s background-color;
@@ -36,6 +36,8 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                    border: 1px solid #efefef;
+                    border-radius: 5px;
                     transition: .2s opacity;
                 }
 
