--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -174,46 +174,35 @@
 .vp-portfolio__preloader {
     position: absolute;
     left: 50%;
-    width: 23px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     margin-top: 45px;
-    margin-left: -11px;
-    animation: vp-preloader 2s linear infinite;
+    margin-left: -10px;
 
-    span {
+    svg {
+        width: 100%;
+        height: 100%;
+    }
+
+    &::after {
+        content: "";
         position: absolute;
         display: block;
-        top: 0;
-        left: 0;
-        width: 10px;
-        height: 7px;
-        background-color: #8a8a8a;
-
-        &:nth-of-type(1) {
-            height: 14px;
-        }
-        &:nth-of-type(2) {
-            left: 12px;
-        }
-        &:nth-of-type(3) {
-            top: 16px;
-        }
-        &:nth-of-type(4) {
-            top: 9px;
-            left: 12px;
-            height: 14px;
-        }
+        top: -2px;
+        left: -2px;
+        width: 24px;
+        height: 24px;
+        text-indent: -9999em;
+        border: 1px solid rgba(#000, .2);
+        border-left: 1px solid #000;
+        border-radius: 50%;
+        animation: vp-preloader-spinner .3s infinite linear;
     }
 }
 
-@keyframes vp-preloader {
-    0%,
+@keyframes vp-preloader-spinner {
     100% {
-        opacity: .5;
-    }
-    40%,
-    60% {
-        opacity: 1;
+        transform: rotate(360deg);
     }
 }
 
