--- a/src/assets/css/layout-justified.scss
+++ b/src/assets/css/layout-justified.scss
@@ -12,7 +12,7 @@
         float: left;
         top: 0;
         left: 0;
-        transition: var(--vp-justified__transition-duration) transform var(--vp-justified__transition-easing), var(--vp-justified__transition-duration) width var(--vp-justified__transition-easing), var(--vp-justified__transition-duration) height var(--vp-justified__transition-easing);
-        will-change: transform, width, height;
+        transition: var(--vp-justified__transition-duration) transform var(--vp-justified__transition-easing);
+        will-change: transform;
     }
 }
