--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -355,6 +355,10 @@ $grid_sm: 600px !default;
  * Settings
  */
 .portfolio_page_visual-portfolio-settings {
+    .description {
+        opacity: .7;
+    }
+
     // Notices styles fix.
     .metabox-holder .notice {
         padding: 15px;
@@ -364,7 +368,9 @@ $grid_sm: 600px !default;
     .vpf-settings-control-pro {
         > td {
             pointer-events: none;
-            opacity: .5;
+        }
+        .description {
+            opacity: .3;
         }
         .vpf-settings-control-pro-label {
             position: relative;
