changed WPBakery shortcode icon

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -54,7 +54,7 @@
 .vc_control-visual-portfolio {
     position: relative;
     overflow: hidden;
-    background-image: url("../images/icon-vc.png");
+    background-image: url("../images/icon-gutenberg.svg");
     background-position: 50% 50%;
     background-size: cover;
     border-radius: 3px;
