changed Custom CSS modal size

--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -20,3 +20,4 @@
 @import "./components/pro-note/style";
 @import "./components/spinner/style";
 @import "./components/tiles-selector/style";
+@import "./components/toggle-modal/style";
