added overflow-wrap CSS to prevent possible style bugs in some rare themes

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -7,6 +7,7 @@
     position: relative;
     box-sizing: border-box;
     min-height: var(--vp-wrap__min-height);
+    overflow-wrap: break-word;
 
     *,
     *::before,
