fixed preloader img logo styles

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -189,7 +189,8 @@
     margin-top: 45px;
     margin-left: -10px;
 
-    svg {
+    svg,
+    img {
         display: block;
         width: 100%;
         height: 100%;
