--- a/src/assets/css/lazyload.scss
+++ b/src/assets/css/lazyload.scss
@@ -25,21 +25,24 @@ img.vp-lazyloaded {
     right: 0;
     bottom: 0;
     left: 0;
+    visibility: visible;
     background: var(--vp-lazyload-images__background);
     background-color: var(--vp-lazyload-images__background-color);
     background-position: 0% 50%;
     background-size: 500% 100%;
+    opacity: 1;
     transition: var(--vp-lazyload-transition-duration) var(--vp-lazyload-transition-duration) opacity, var(--vp-lazyload-transition-duration) var(--vp-lazyload-transition-duration) visibility;
 }
 
-.vp-portfolio__item-img-lazyloading,
-.vp-portfolio__thumbnail-img-lazyloading {
-    &::before {
-        visibility: visible;
-        opacity: 1;
-        transition: none;
-        animation: vp-lazyload-placeholder var(--vp-lazyload-images__animation-duration) linear infinite;
-    }
+.vp-portfolio__item-img-lazyloading::before,
+.vp-portfolio__thumbnail-img-lazyloading::before {
+    animation: vp-lazyload-placeholder var(--vp-lazyload-images__animation-duration) linear infinite;
+}
+
+.vp-portfolio__item-img-lazyloaded::before,
+.vp-portfolio__thumbnail-img-lazyloaded::before {
+    visibility: visible;
+    opacity: 0;
 }
 
 @keyframes vp-lazyload-placeholder {
