fixed Gutenberg iframe preview width conflict with Gutenberg container styles

--- a/src/gutenberg/components/iframe-preview/style.scss
+++ b/src/gutenberg/components/iframe-preview/style.scss
@@ -5,8 +5,10 @@
     overflow: hidden;
 
     iframe {
+        position: absolute;
         width: 100%;
-        max-width: none;
+        // stylelint-disable-next-line
+        max-width: none !important;
         margin: 0;
     }
 }
