--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -525,7 +525,12 @@ $grid_sm: 600px !default;
     }
 }
 
-#vp_social_integrations h2,
+#vp_social_integrations,
+#vp_watermarks {
+    h2 {
+        display: none;
+    }
+}
 #vp_social_integrations .submit {
     display: none;
 }
