--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -527,10 +527,8 @@ $grid_sm: 600px !default;
 
 #vp_social_integrations,
 #vp_watermarks {
-    h2 {
+    h2,
+    .submit {
         display: none;
     }
-}
-#vp_social_integrations .submit {
-    display: none;
 }
