rename styles on range settings control

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -575,10 +575,10 @@ $grid_sm: 600px !default;
     /**
     * Range Field.
     **/
-    .regular-range {
+    .vp-range-field {
         width: 183px;
     }
-    .number-range {
+    .vp-range-number-field {
         box-sizing: border-box;
         width: 55px;
         margin-left: 9px;
