--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -608,6 +608,7 @@ $grid_sm: 600px !default;
         display: inline-block;
         width: 36px;
         height: 18px;
+
         input {
             width: 0;
             height: 0;
@@ -623,6 +624,7 @@ $grid_sm: 600px !default;
             background-color: #ccc;
             border-radius: 34px;
             transition: .4s;
+
             &::before {
                 content: "";
                 position: absolute;
@@ -635,6 +637,7 @@ $grid_sm: 600px !default;
                 transition: .4s;
             }
         }
+
         input:checked + .vp-toggle-field-slider-round {
             background-color: #007cba;
         }
@@ -645,6 +648,14 @@ $grid_sm: 600px !default;
 
         input:checked + .vp-toggle-field-slider-round::before {
             transform: translateX(18px);
+        }
+
+        + .description {
+            display: inline-block;
+            max-width: calc(100% - 50px);
+            margin: 0;
+            margin-left: .8em;
+            vertical-align: middle;
         }
     }
 
