--- a/src/assets/css/theme-twentytwentyone.scss
+++ b/src/assets/css/theme-twentytwentyone.scss
@@ -13,3 +13,15 @@
 .vp-preview-body {
     background: none;
 }
+
+// Fix images size.
+// https://github.com/WordPress/twentytwentyone/blob/trunk/inc/template-functions.php#L405-L447.
+[data-vp-layout="tiles"] .vp-portfolio__item-img img,
+[data-vp-masonry-images-aspect-ratio*=":"] .vp-portfolio__item-img img,
+[data-vp-grid-images-aspect-ratio*=":"] .vp-portfolio__item-img img {
+    // stylelint-disable
+    width: 100% !important;
+    max-width: none !important;
+    height: 100% !important;
+    // stylelint-enable
+}
