improved styles for Fancybox thumbnails
added new Pro settings for Thumbnails

--- a/src/assets/css/popup-fancybox.scss
+++ b/src/assets/css/popup-fancybox.scss
@@ -21,6 +21,7 @@
         }
     }
 
+    // Caption.
     .fancybox-caption__body {
         font-size: 12px;
         color: #fff;
@@ -45,6 +46,46 @@
             a {
                 text-decoration: none;
             }
+        }
+    }
+
+    // Thumbnails.
+    .fancybox-thumbs {
+        width: var(--vp-popup--thumbnails__size);
+        background: var(--vp-popup--thumbnails__background-color);
+    }
+    &.fancybox-show-thumbs .fancybox-inner {
+        right: var(--vp-popup--thumbnails__size);
+    }
+    .fancybox-thumbs__list a {
+        width: var(--vp-popup--thumbnails__size);
+        max-width: calc(100% - 4px);
+        height: calc(var(--vp-popup--thumbnails__size) / calc(var(--vp-popup--thumbnails__aspect-ratio)));
+
+        &::before {
+            border: 2px solid var(--vp-popup--thumbnails--items__border-color);
+        }
+
+        @supports (aspect-ratio: 16 / 9) {
+            width: calc(100% - 4px);
+            max-width: none;
+            height: auto;
+            max-height: none;
+            // stylelint-disable-next-line
+            aspect-ratio: var(--vp-popup--thumbnails__aspect-ratio);
+        }
+    }
+    .fancybox-thumbs-y .fancybox-thumbs__list {
+        &::-webkit-scrollbar {
+            width: var(--vp-popup--thumbnails--scrollbar__size);
+        }
+        &::-webkit-scrollbar-track {
+            background: var(--vp-popup--thumbnails--scrollbar-track__background-color);
+            box-shadow: none;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: var(--vp-popup--thumbnails--scrollbar-thumb__background-color);
+            border-radius: var(--vp-popup--thumbnails--scrollbar-thumb__border-radius);
         }
     }
 }
