added possibility to replace image in gallery control
changed preview image (use larger one) in gallery control

--- a/src/gutenberg/components/gallery-control/style.scss
+++ b/src/gutenberg/components/gallery-control/style.scss
@@ -124,4 +124,8 @@
 
 .vpf-component-gallery-control-item-modal {
     max-width: 300px;
+
+    .editor-post-featured-image {
+        margin-bottom: 30px;
+    }
 }
