--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -4,6 +4,12 @@
  * Fly items style
  */
 .vp-portfolio__items-style-fly {
+    // fix for safari border-radius.
+    // https://github.com/nk-crew/visual-portfolio/issues/150
+    .vp-portfolio__item {
+        z-index: 0;
+    }
+
     .vp-portfolio__item a {
         text-decoration: var(--vp-items-style-fly--links__text-decoration);
         outline: none;
