fixed hiding save button on pro settings

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -749,7 +749,8 @@ $grid_sm: 600px !default;
 }
 
 #vp_social_integrations,
-#vp_watermarks {
+#vp_watermarks,
+#vp_white_label {
     .metabox-holder-footer {
         display: none;
     }
