fixed menu_order in some situations
added helpful notice to posts Menu Order control

--- a/src/gutenberg/components/controls-render/style.scss
+++ b/src/gutenberg/components/controls-render/style.scss
@@ -11,6 +11,15 @@
     }
 }
 
+// Notice control.
+.vpf-control-wrap-notice .components-notice {
+    margin: 0;
+
+    &.is-info {
+        background-color: #e6f7ff;
+    }
+}
+
 .vpf-control-category-title-pro {
     padding: .2em .8em;
     margin-right: 30px;
