changed items border radius option to use CSS variable

--- a/src/templates/items-list/items-style/emerge/_variables.scss
+++ b/src/templates/items-list/items-style/emerge/_variables.scss
@@ -8,6 +8,7 @@
     --vp-items-style-emerge--links-hover__color: var(--vp-color-brand);
 
     // Image.
+    --vp-items-style-emerge--image__border-radius: 0;
     --vp-items-style-emerge--image__transform: translateY(0);
     --vp-items-style-emerge--image-hover__transform: translateY(-10px);
 
