--- a/src/templates/items-list/items-style/fade/_variables.scss
+++ b/src/templates/items-list/items-style/fade/_variables.scss
@@ -6,6 +6,7 @@
     --vp-items-style-fade--links__text-decoration: none;
 
     // Image.
+    --vp-items-style-fade--image__border-radius: 0;
     --vp-items-style-fade--image-hover__transform: scale(1.05);
 
     // Overlay.
