--- a/src/templates/items-list/items-style/_variables.scss
+++ b/src/templates/items-list/items-style/_variables.scss
@@ -8,6 +8,7 @@
     --vp-items-style-default--links-hover__color: var(--vp-color-brand);
 
     // Image.
+    --vp-items-style-default--image__border-radius: 0;
     --vp-items-style-default--image-hover__transform: scale(1.05);
 
     // Meta.
