--- a/src/templates/items-list/items-style/fly/_variables.scss
+++ b/src/templates/items-list/items-style/fly/_variables.scss
@@ -5,6 +5,9 @@
     // Links.
     --vp-items-style-fly--links__text-decoration: none;
 
+    // Image.
+    --vp-items-style-fly--image__border-radius: 0;
+
     // Overlay.
     --vp-items-style-fly--overlay__text-decoration: none;
     --vp-items-style-fly--overlay__color: #fff;
