--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -4,9 +4,11 @@
  * Fly items style
  */
 .vp-portfolio__items-style-fly {
-    // fix for safari border-radius.
-    // https://github.com/nk-crew/visual-portfolio/issues/150
     .vp-portfolio__item {
+        border-radius: var(--vp-items-style-fly--image__border-radius);
+
+        // fix for safari border-radius.
+        // https://github.com/nk-crew/visual-portfolio/issues/150
         z-index: 0;
     }
 
